# Hallumeter

./: .gitignore  AUDIT_REPORT.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH.md  RESEARCH_CURVES.md  SETTINGS.md  TODO.md  VOICE_LINES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: bug_report.yml  idea.yml  q_and_a.yml
.github/workflows/: build.yml  release.yml
.husky/: pre-commit
src/: App.css  App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  core.rs  lib.rs  settings.rs
src-tauri/src/sources/: claude.rs  codex.rs  continue_bridge_yaml.rs  continue_reader.rs  continue_types.rs  copilot.rs  forge.rs  mod.rs
src-tauri/src/tests/: audio_tests.rs  continue_fixtures.rs  continue_parser_tests.rs  continue_reader_tests.rs  core_tests.rs  mod.rs
src/assets/models/: curves.json
src/lib/: risk.test.ts  risk.ts
