[package]
name = "hallumeter"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Efstathios Outas (EFS.O) <Bdseign@gmail.com>"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell   = "2"
tauri-plugin-process = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
rodio        = "0.17"
